CI images update

--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-10 23:43:21
+lastsearch = 2024-08-11 03:48:37
 
 [shopee.vn]
 match = 56.2%%
@@ -232,9 +232,9 @@ title = chi minh toi - Tin tức tức online 24h về chỉ mình tôi
 url = https://zingnews.vn/chỉ-mình-tôi-tin-tuc/trang10.html?type=2
 
 [www.facebook.com]
-match = 6.2%%
-title = Người Việt Houston
-url = https://www.facebook.com/groups/NguoiVietHouston/
+match = -93.8%%
+title = YAN News - 4. DƯỚI CHÂN CÓ “RÙA” 👉 Bàn ...
+url = https://www.facebook.com/yannews/posts/4-dưới-chân-có-rùa-bàn-chân-có-rùa-là-bàn-chân-có-chỗ-lõm-sâu-ngay-chính-giữa-lò/1281901218547431/
 
 [www.nature.com]
 match = -43.8%%
@@ -279,7 +279,7 @@ url = https://www.christies.com/en/lot/lot-5751621
 [leflair.com]
 match = -131.2%%
 title = Nước rửa chân khử mùi hôi, ngăn ngừa nấm HAKINI...
-url = https://leflair.com/en/shop/nuoc-rua-chan-khu-mui-hoi-ngan-ngua-nam-hakinika-98798
+url = https://leflair.com/en/shop/nuoc-rua-chan-khu-mui-hoi-ngan-ngua-nam-hakinika-98798?srsltid=AfmBOoomaFJe1lEDOi1MHYKSnd1RBOlZ-Qpm0lEQ-2SjHOmsOCXbyeMO
 
 [olm.vn]
 match = -93.8%%
