--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-11 02:44:55
+lastsearch = 2024-08-11 03:51:01
 
 [www.lazada.vn]
 match = -27.8%%
@@ -395,4 +395,14 @@ url = https://ndma.gov.in/sites/default/files/PDF/ndmp-2019.pdf
 match = -161.1%%
 title = Những mẫu áo gối 50 x 70 đẹp, độc và lạ cho tổ ấm của ...
 url = https://sieuthidem.vn/nhung-mau-ao-goi-50-x-70-dep-doc-va-la-cho-to-am-cua-gia-dinh/
+
+[laqlaserweb.laquintaca.gov]
+match = -125.0%%
+title = Template
+url = https://laqlaserweb.laquintaca.gov/WebLink/DocView.aspx?id=533410&dbid=1&repo=CityofLaQuinta
+
+[extranet.who.int]
+match = -172.2%%
+title = National Action Plan for Health Security (NAPHS) 2020-2024
+url = https://extranet.who.int/sph/sites/default/files/document-library/document/INDONESIA NAPHS.PDF
 
