--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-11 00:53:12
+lastsearch = 2024-08-11 03:49:59
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,8 +17,8 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -105.6%%
-title = NEM CHAY SỐT KEM HẠNH NHÂN siêu ngon các đồng ...
+match = -144.4%%
+title = NEM CHAY SỐT KEM HẠNH NHÂN siêu ngon các đồng chí ơi. ...
 url = https://www.instagram.com/p/C9mD02RvBka/
 
 [www.facebook.com]
@@ -27,9 +27,9 @@ title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
 url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -161.1%%
+title = Trả lời @Tran Nguyen 100g nem chua chứa bao nhiêu calo ...
+url = https://www.tiktok.com/@caloer/video/7239537500782333190?lang=en
 
 [www.youtube.com]
 match = -122.2%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -200.0%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -127.8%%
+title = Nem lụi - 18 ngõ 66 Dịch Vọng Hậu, Cầu Giấy, Hà Nội
+url = https://m.facebook.com/amthuchoabeo.vn/
 
 [www.proz.com]
 match = -183.3%%
