--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-10 23:24:11
+lastsearch = 2024-08-11 03:50:19
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -48,7 +48,7 @@ url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.akc.org]
 match = -45.0%%
-title = Puppy Names – Cute & Unique Dog Names
+title = Puppy Names - Cute & Unique Dog Names
 url = https://www.akc.org/expert-advice/lifestyle/puppy-names/
 
 [www.britannica.com]
@@ -162,9 +162,9 @@ title = Naval Forces Korea - Navy.mil
 url = https://cnrk.cnic.navy.mil/
 
 [books.google.com]
-match = -115.0%%
-title = Japan Weekly Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=_socFPQclu&sig=ACfU3U3JPy5SrF_LqQgtzX-9zpneLG__Gg&hl=en&sa=X&ved=2ahUKEwi__PfszuOHAxVOElkFHWKcMRIQ6AF6BAghEAM
+match = -180.0%%
+title = The Japan Daily Mail - Volume 34 - Page 194 - Google Books Result
+url = https://books.google.com/books?id=Zm0zAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=38NDaTuhMq&sig=ACfU3U1FBJwQqG-_gjrhPg0dYHJF98L2xw&hl=en&sa=X&ved=2ahUKEwiqs5fDpuuHAxWfE1kFHc-jPGEQ6AF6BAgZEAM
 
 [strandedonpeel.my-free.website]
 match = -45.0%%
@@ -522,9 +522,9 @@ title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
 url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
 
 [www.wdtn.com]
-match = -130.0%%
-title = FBI: California woman brought sword, whip and other ...
-url = https://www.wdtn.com/news/politics/ap-politics/ap-fbi-california-woman-brought-sword-whip-and-other-weapons-into-capitol-during-jan-6-riot/
+match = -135.0%%
+title = Could another insurrection happen in January? This film ...
+url = https://www.wdtn.com/news/politics/ap-politics/ap-could-another-insurrection-happen-in-january-this-film-imagines-what-if/
 
 [www.localsyr.com]
 match = -130.0%%
