CI images update

--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-11 03:33:23
+lastsearch = 2024-08-11 04:26:12
 
 [demxanh.com]
 match = -14.8%%
@@ -17,9 +17,9 @@ title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [goni.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
-url = https://goni.vn/chieu-dieu-hoa-goni/
+match = -33.3%%
+title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
+url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [russo.vn]
 match = 29.6%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa là gì? Nằm chiếu điều hòa có mát không
 url = https://congtynemthangloi.com/chieu-dieu-hoa-la-gi-nam-chieu-dieu-hoa-co-mat-khong
 
 [suongtuyet.com]
-match = -29.6%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 18.5%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [tiki.vn]
 match = 33.3%%
@@ -67,19 +67,19 @@ title = Chiếu mây điều hòa 3D kích thước 140x190cm
 url = https://chieutrelanlan.com/chieu-dieu-hoa-kich-thuoc-140x190cm-51.html
 
 [www.lazada.vn]
-match = -40.7%%
-title = Size 1.6x2m - Chiếu điều hòa mát lạnh tencel mủ cao su ...
-url = https://www.lazada.vn/products/size-16x2m-chieu-dieu-hoa-mat-lanh-tencel-mu-cao-su-non-loai-i-khong-co-vo-goi-ben-ben-chieu-dieu-hoa-cao-su-chieu-cao-su-non-i854758112.html
+match = -51.9%%
+title = Size 1.8x2m - Chiếu điều hòa tencel từ cao su non êm mát ...
+url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-tu-cao-su-non-em-mat-khong-kem-vo-goi-chat-chon-mau-dang-khoa-79-chieu-dieu-hoa-cao-su-non-chieu-cao-su-chieu-tencel-chieu-mat-mua-he-i786966766.html
 
 [h5.lazada.vn]
-match = -40.7%%
-title = Size 1.6x2m - Chiếu điều hòa mát lạnh tencel mủ cao su ...
+match = -55.6%%
+title = Size 1.6x2m - Chiếu điều hòa mát lạnh tencel mủ cao su non ...
 url = https://h5.lazada.vn/products/size-16x2m-chieu-dieu-hoa-mat-lanh-tencel-mu-cao-su-non-loai-i-khong-co-vo-goi-ben-ben-chieu-dieu-hoa-cao-su-chieu-cao-su-non-i854758112-s2407336069.html
 
 [thegioinem.com]
-match = 33.3%%
-title = 10+ mẫu chiếu điều hoà hot nhất năm
-url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
+match = 7.4%%
+title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
+url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [dienlanhdonganh.com]
 match = -66.7%%
@@ -92,9 +92,9 @@ title = Chiếu điều hoà cao su non có mát không? Review chi tiết
 url = https://ru9.vn/blogs/magazine/chieu-dieu-hoa-cao-su-non-co-tot-khong
 
 [www.facebook.com]
-match = 60.0%%
-title = Chiếu Điều Hòa Cao Su Non
-url = https://www.facebook.com/groups/753270865357544/
+match = -40.0%%
+title = Đồ dùng cao cấp
+url = https://www.facebook.com/sieuthitieudung21/?locale=nb_NO
 
 [fptshop.com.vn]
 match = 0.0%%
