--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-11 03:17:54
+lastsearch = 2024-08-11 04:26:53
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
 url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [www.youtube.com]
-match = -54.2%%
-title = 🔴TRỰC TIẾP 🔴THỜI SỰ 19H VTV1 - 20/3/2024 | ĐÀI ...
-url = https://www.youtube.com/watch?v=Pa-TmxiqHBk
+match = -91.7%%
+title = Thủ tướng Phạm Minh Chính kiểm tra tiến độ nhà ga T3, Tân ...
+url = https://www.youtube.com/watch?v=QDKEe6fnFx0
 
 [chieutrucxinh.weebly.com]
 match = -70.8%%
@@ -222,9 +222,9 @@ title = Cổng thông tin điện tử Bộ Kế hoạch và Đầu tư
 url = https://www.mpi.gov.vn/
 
 [m.facebook.com]
-match = -5.0%%
-title = Techcombank Việt Nam
-url = https://m.facebook.com/story.php/?story_fbid=916908393815661&id=100064895251803
+match = -95.8%%
+title = Việt Hiphop - Tròn 12 năm kể từ ngày mà VietDragon ra đi...
+url = https://m.facebook.com/story.php/?story_fbid=1010618367739737&id=100063747483126
 
 [baodautu.vn]
 match = -79.2%%
