--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-11 00:11:46
+lastsearch = 2024-08-11 04:23:49
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -19,7 +19,7 @@ url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 [demxanh.com]
 match = -6.5%%
 title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html?srsltid=AfmBOooadVygjolN8zvPbtYcAiZyp3CD2XQQcPYbHIa7yIHkXnhGIRqi
 
 [dreamland.vn]
 match = -21.1%%
@@ -52,9 +52,9 @@ title = Ga chống thấm Dreamland 200x220
 url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 
 [www.facebook.com]
-match = 3.2%%
-title = Chăn Ga Gối Đệm Luxury 81 Minh Khai
-url = https://www.facebook.com/changagoiluxury/?locale=es_LA
+match = 16.1%%
+title = Thế Giới Chăn Ga Gối Đệm Hà Đông
+url = https://www.facebook.com/changagoidemHadong/?locale=nn_NO
 
 [www.chandemsadora.com]
 match = 17.2%%
