--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-10 23:27:56
+lastsearch = 2024-08-11 04:13:07
 
 [www.everonvn.vn]
-match = -105.0%%
-title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
-url = https://www.everonvn.vn/san-pham/dem-everon.html
+match = -120.0%%
+title = Bảng giá đệm bông ép Everon dày 9cm (10 phân) vỏ gấm ...
+url = https://www.everonvn.vn/chi-tiet/gia-dem-everon-9cm.html
 
 [everon.vip]
 match = 50.0%%
@@ -59,7 +59,7 @@ url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOop6-kLLOcwHZ1KYyrVHLVVRW5dD6QFhRnUQIp4_APeaH8mFXCGt
 
 [www.diepxuan.com]
 match = 0.0%%
@@ -74,7 +74,7 @@ url = https://everon.online/products/dem-song-everon
 [everonxuankhieu.vn]
 match = -90.0%%
 title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ ...
-url = https://everonxuankhieu.vn/dem-bong-ep-everon/
+url = https://everonxuankhieu.vn/dem-bong-ep-everon/?srsltid=AfmBOooIM2KmLAoCgVlb80NzbWStwpGJqOJwWXE9dy_2N_uiJEMZZKl4
 
 [nemgiagoc.vn]
 match = -60.0%%
