--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-11 03:34:27
+lastsearch = 2024-08-11 04:18:40
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -60.9%%
+title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
+url = https://en.yna.co.kr/view/AEN20130109006800325
 
 [www.usmcu.edu]
 match = -104.3%%
