--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-10 18:56:35
+lastsearch = 2024-08-11 04:22:27
 
 [shopee.vn]
 match = -52.4%%
@@ -34,7 +34,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -104.8%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu? - Everon
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOopw6NehaSdlLxS8qFVw64kpN9ldb6xeyJvQyBKgrBFU3-99eNqG
 
 [comehome.com.vn]
 match = -119.0%%
