CI images update

--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-08-11 00:19:01
+lastsearch = 2024-08-11 04:29:43
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -535,4 +535,9 @@ url = https://vinafood2.com.vn/featured_item/co-cau-to-chuc/
 match = -206.7%%
 title = VKSND tỉnh Thừa Thiên Huế triển khai công tác tuyên ...
 url = https://vksndtc.gov.vn/tin-hoat-dong-vksnd-toi-cao/vksnd-tinh-thua-thien-hue-trien-khai-cong-tac-tuye-d2-t12386.html
+
+[hud10.com.vn]
+match = -180.0%%
+title = Dịch vụ - CÔNG TY CỔ PHẦN ĐẦU TƯ VÀ XÂY DỰNG HUD10
+url = https://hud10.com.vn/chuyen-muc/dich-vu/
 
