--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-11 02:22:30
+lastsearch = 2024-08-11 04:26:54
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Cruise Calendar 2024 / 2025
-url = https://www.tui.co.uk/cruise/cruise-calendar/
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -285,4 +285,9 @@ url = https://www.amazon.sg/Flames-Hope-Wings-Fire-15/dp/1338214578
 match = -140.0%%
 title = Longest Flights from Singapore (25 February 2024)
 url = http://www.gcmap.com/featured/20240225
+
+[shopee.sg]
+match = -206.7%%
+title = Wings of Fire (15 book series) By Tui T. Sutherland
+url = https://shopee.sg/Wings-of-Fire-(15-book-series)-By-Tui-T.-Sutherland-i.1142244246.15899824128
 
