--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-11 02:43:50
+lastsearch = 2024-08-11 04:30:25
 
 [hanvico.com.vn]
 match = 33.3%%
@@ -12,8 +12,8 @@ title = Bộ ga chun LIVING - LV54
 url = https://hanvico.com.vn/san-pham/lv54/
 
 [www.diepxuan.com]
-match = -4.8%%
-title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
+match = -14.3%%
+title = Bộ chăn ga gối màu xoa tin 14 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
