--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-11 00:27:27
+lastsearch = 2024-08-11 04:39:38
 
 [demxanh.com]
 match = -60.9%%
 title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOoqDCB_yirw0BuoKD_1zmXjY_SnbC4lz_s_tRmjwq2ykyw-F5kbI
 
 [www.lazada.vn]
 match = 47.8%%
 title = Chiếu Trúc cao bằng 1.4 X 1.95
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOoq_20Awz_HBO3F51cDngAJkK2kJHRnIsq9SFOCdhThpQNo43yr5
 
 [shopee.vn]
 match = 43.5%%
@@ -29,7 +29,7 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOor3vycouRFO_HRTI-RzpK96AnmOYEeGyezJ40g_n0cTsT2FV95C
 
 [chieutrucsaigon.com]
 match = -17.4%%
