--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -294,7 +294,7 @@ url = https://saigonthanhcong.com/cung-kham-pha-ve-dep-cua-bien-voi-tour-vung-ta
 [hita.com.vn]
 match = -114.3%%
 title = 10+ địa điểm check in Vũng Tàu đẹp say mê khiến bạn ...
-url = https://hita.com.vn/10-dia-diem-check-in-vung-tau-dep-say-me-khien-ban-quen-loi-ve-post-2861.html
+url = https://hita.com.vn/10-dia-diem-check-in-vung-tau-dep-say-me-khien-ban-quen-loi-ve-post-2861.html?srsltid=AfmBOoqP_ugQgIM3zPsCm59zmE4VP_L-L3DbD5Nn99SAzoIjbn2icxX2
 
 [bariavungtautourism.com.vn]
 match = -123.8%%
