--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-11 01:47:37
+lastsearch = 2024-08-11 04:30:46
 
 [batdongsan.com.vn]
 match = -180.0%%
@@ -14,7 +14,7 @@ url = https://batdongsan.com.vn/ban-can-ho-chung-cu-khu-dan-cu-phu-loi
 [vinatools.com]
 match = -200.0%%
 title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong cắt ...
-url = https://vinatools.com/keo-cat-ton-d208/?srsltid=AfmBOooSvzF3SsZV_Rhotgr5G45JMJ-0P6TR9kkaHoxwWoW7bUKGByTP
+url = https://vinatools.com/keo-cat-ton-d208/
 
 [shopvnb.com]
 match = -166.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -146.7%%
+title = Cong khuỷu tay sang 2 bên và hạ thấp thân ...
+url = https://www.facebook.com/photo.php?fbid=3056603124584773&id=1755099078068524&set=a.1772230163022082&locale=pt_PT
 
 [lacvietauction.vn]
 match = -80.0%%
