--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-11 03:44:07
+lastsearch = 2024-08-11 04:30:04
 
 [vinatools.com]
 match = -206.7%%
 title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/
+url = https://vinatools.com/keo-cat-ton-d216-sbsk/?srsltid=AfmBOoqQd1VwUDV-0zY9rgnrKMuVHtcAZjBOTyqXHu2InsinoZRUtJVS
 
 [www.vietnamairport.vn]
 match = -240.0%%
