--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-08-11 03:14:47
+lastsearch = 2024-08-11 04:41:44
 
 [shopee.vn]
 match = -73.9%%
@@ -27,9 +27,9 @@ title = Cơ Sở Sản Xuất Chiếu Thái Bình
 url = https://trangvangvietnam.com/listings/1187701263/co-so-san-xuat-chieu-thai-binh.html
 
 [www.lazada.vn]
-match = -34.8%%
-title = Chiếu Nhựa HOMIES Thái Bình Gập Đôi Nhựa Nguyên Sinh
-url = https://www.lazada.vn/products/chieu-nhua-homies-thai-binh-gap-doi-nhua-nguyen-sinh-nhieu-kich-thuoc-i1786455501.html
+match = -26.1%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [www.sendo.vn]
 match = -34.8%%
