CI images update

--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-11 04:13:07
+lastsearch = 2024-08-11 05:24:29
 
 [www.everonvn.vn]
-match = -120.0%%
-title = Bảng giá đệm bông ép Everon dày 9cm (10 phân) vỏ gấm ...
-url = https://www.everonvn.vn/chi-tiet/gia-dem-everon-9cm.html
+match = -105.0%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [everon.vip]
 match = 50.0%%
@@ -54,12 +54,12 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOopK6gzotp0c7z_aBtyuV3j9mY392ttCgCejuN1c1w92P89btJRJ
 
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOop6-kLLOcwHZ1KYyrVHLVVRW5dD6QFhRnUQIp4_APeaH8mFXCGt
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOoo3Cffg7TooRd8zm0cOFB5nSyLAK4OkMD29Ih1-8xY9TBo6MALq
 
 [www.diepxuan.com]
 match = 0.0%%
@@ -74,7 +74,7 @@ url = https://everon.online/products/dem-song-everon
 [everonxuankhieu.vn]
 match = -90.0%%
 title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ ...
-url = https://everonxuankhieu.vn/dem-bong-ep-everon/?srsltid=AfmBOooIM2KmLAoCgVlb80NzbWStwpGJqOJwWXE9dy_2N_uiJEMZZKl4
+url = https://everonxuankhieu.vn/dem-bong-ep-everon/?srsltid=AfmBOopk99HujztxXq6KdHi95CzhxiXDKgClwibugvq4jCSIlRuDNtL4
 
 [nemgiagoc.vn]
 match = -60.0%%
