--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-08-11 03:39:56
+lastsearch = 2024-08-11 05:24:48
 
 [www.kymdan.com]
 match = 4.2%%
@@ -17,14 +17,14 @@ title = Bộ Ga Chun Tencel Việt Á - Siêu Mát [SALE -50%%]
 url = https://thegioidemviet.vn/bo-ga-chun-he-tc08/
 
 [toanhuyen.vn]
-match = -43.8%%
-title = Chăn Ga Gối Từ 3 đến 6 triệu Archives - Nội thất Toản Huyền
-url = https://toanhuyen.vn/bo-suu-tap/chan-ga-goi-tu-3-den-6-trieu/
+match = 6.2%%
+title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
+url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
 
 [yeshomebedding.com]
-match = 11.5%%
-title = bộ chăn ga everon ept24034
-url = https://yeshomebedding.com/bo-san-pham-everon-ept24034
+match = 0.0%%
+title = bộ ga everon esbm 21016
+url = https://yeshomebedding.com/bo-chun-chan-everon-esbm-21016-modal
 
 [www.lazada.vn]
 match = -15.6%%
