--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-11 01:56:20
+lastsearch = 2024-08-11 05:14:06
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -19,12 +19,12 @@ url = https://songhong.info/chan-ga-goi-bc16
 [demxanh.com]
 match = -19.0%%
 title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
-url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html?srsltid=AfmBOoqrgkAX3iU-gKFWIrDFojemYSRVcIONZmBgc8gLBBpSDKIaFJkK
+url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
-match = -57.1%%
-title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16?srsltid=AfmBOoqgWPAyEM5nez6QVNpJHpV8knlkhf2tyPRQXM1HX3W7OpejEmRP
+match = -33.3%%
+title = Bộ ga chun Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v16
 
 [changagoidemsonghong.com]
 match = -38.1%%
@@ -44,7 +44,7 @@ url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-160x200.html?srsltid=AfmBOor0JpAkBg3s_dNlz2rPbq33Lq35FppZScZ4VvThLdAwATAvoQu4
+url = https://www.diepxuan.com/bo-chun-xoa-160x200.html
 
 [everon365.vn]
 match = 33.3%%
