--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-10 21:14:46
+lastsearch = 2024-08-11 05:23:26
 
 [shopee.vn]
 match = -25.9%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
 [www.lazada.vn]
 match = -11.1%%
 title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung ...
-url = https://www.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
+url = https://www.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html?srsltid=AfmBOop9vBeXiXUXZwGhpSZ92cRWtfOb8jI5uklGnDrLGpvzY1XOGR8j
 
 [tiki.vn]
 match = 11.1%%
