--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-10 23:49:26
+lastsearch = 2024-08-11 05:27:37
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOopJwTlc8OJACC5SgM_ovlmqUrEZQe5ZZPaVzl6EbPKvPOJvnRg9
 
 [shopee.vn]
 match = -6.7%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -106.7%%
-title = Đèn Led mắt ếch HT 8091 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/me91-14-t-v-tt-ht-light-level
+match = -146.7%%
+title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -186.7%%
@@ -77,9 +77,9 @@ title = Code Huyền Thoại Hải Tặc mới nhất (cập nhật 14/06/2024)
 url = https://www.nguyenkim.com/code-hai-tac-dai-chien.html
 
 [htlight.vn]
-match = 6.7%%
-title = ĐÈN LED - HTLIGHT
-url = http://htlight.vn/
+match = -26.7%%
+title = CẦN ĐÈN ĐÔI CK14 - HTLIGHT
+url = https://htlight.vn/can-den-doi-ck14.html
 
 [saigontourist.edu.vn]
 match = -120.0%%
