--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-11 02:19:47
+lastsearch = 2024-08-11 05:25:30
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -231.2%%
-title = Công bố tình huống khẩn cấp sạt lở đê biển Đông tại Bạc Liêu ...
-url = https://www.youtube.com/watch?v=rtguJGxJ_6g
+match = -218.8%%
+title = vườn mai vàng đẹp từ cm , chăm sóc quá kỷ sạch sẽ quá đẹp ...
+url = https://www.youtube.com/watch?v=cRkQKLiNfEU
 
 [books.google.com]
 match = -218.8%%
