--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-08-11 03:18:34
+lastsearch = 2024-08-11 05:20:38
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOoorSDjHlxIx2HdMr21OTHc4aOyz5b2EJsHSNsJA0tDbrDm02TXu
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [changagoidemdep.vn]
 match = -12.5%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-
 [demxanh.com]
 match = 6.2%%
 title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html?srsltid=AfmBOoqqmCws5Lq1Zh5d-oU8UF6BnTa0YqDBlH4EFDyQQHuZ5hkdoXkE
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [www.youtube.com]
 match = -43.8%%
