--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-11 04:18:40
+lastsearch = 2024-08-11 05:18:14
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -122,9 +122,9 @@ title = EBB and Flow, November 1950-July 1951 - DTIC
 url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
 
 [www.tiktok.com]
-match = -47.8%%
-title = Collab of my dreamssss 🍩 #korea #dunkin #sanrio
-url = https://www.tiktok.com/@nuoyee/video/7222350636099046657?lang=en
+match = -113.0%%
+title = Sour frozen pineapple from @Fruit Riot ?! • Watch and see ...
+url = https://www.tiktok.com/@mainstmuse/video/7343386889824603435?lang=en
 
 [30rates.com]
 match = -52.2%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -60.9%%
-title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
-url = https://en.yna.co.kr/view/AEN20130109006800325
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.usmcu.edu]
 match = -104.3%%
