--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-11 01:17:28
+lastsearch = 2024-08-11 05:28:59
 
 [suongtuyet.com]
 match = 16.0%%
@@ -19,7 +19,7 @@ url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 [demxanh.com]
 match = -72.0%%
 title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trường!
-url = https://demxanh.com/dem-bong-ep-tuan-anh.html?srsltid=AfmBOopV6WKy23DAnuJ9d3y0mjnPqsbIX46BXYAQ8SLuADhJ5XOsa9HL
+url = https://demxanh.com/dem-bong-ep-tuan-anh.html
 
 [shopee.vn]
 match = -40.0%%
