--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-11 01:33:29
+lastsearch = 2024-08-11 06:53:49
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,9 +37,9 @@ title = Northwest Georgia Scanner
 url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -215.4%%
-title = Jay-Z & Kanye West - Ni**as In Paris (Explicit)
-url = https://www.youtube.com/watch?v=gG_dA32oH44
+match = -338.5%%
+title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
+url = https://www.youtube.com/watch?v=wwH3mdjbKac
 
 [www.regmovies.com]
 match = -215.4%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -10.0%%
-title = sylviagani
-url = https://www.instagram.com/sylviagani/?hl=en
+match = -253.8%%
+title = gani (@hairstory_by_gani) • Instagram photos and videos
+url = https://www.instagram.com/hairstory_by_gani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
@@ -234,7 +234,7 @@ url = https://www.ipassio.com/blog/list-of-ragas-in-indian-classical-music
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001
+url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOoqktffyIICovf5KzmhjvB2fF1ghrjFduqY5wTTfBVhZS4VehIVz
 
 [pubs.acs.org]
 match = -330.8%%
@@ -699,7 +699,7 @@ url = https://www.parker.com/content/dam/Parker-com/Literature/Sporlan/Sporlan-p
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOoptYeDXbVgncg3_88qiC2Qdksz1HyyEA_ScG6Cr7pVX0jiIb3mh
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOorGE5sHkkAga_tPcJyoDeMB0eTx80RaM-78toR8yKjKMnejaOMU
 
 [www.historycolorado.org]
 match = -115.4%%
