--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-11 00:42:56
+lastsearch = 2024-08-11 06:45:30
 
 [www.gov.uk]
 match = 0.0%%
@@ -1275,4 +1275,9 @@ url = https://www.dcunited.com/
 match = -225.0%%
 title = KTRE
 url = https://www.ktre.com/
+
+[a16.asmdc.org]
+match = -200.0%%
+title = Assemblymember Rebecca Bauer-Kahan Representing the ...
+url = https://a16.asmdc.org/
 
