--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-11 05:45:55
+lastsearch = 2024-08-11 06:51:02
 
 [www.diepxuan.com]
-match = 3.6%%
-title = Chiếu trúc Quế Lâm II 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-que-lam-ii-150x190.html?srsltid=AfmBOorXA-EFmkBEMvmWzIZSVxPLcSrelAd2GPYPXMAwN01SM5tG-_Da
+match = -14.3%%
+title = Bộ ga chun chần WarmDream 180x200 HQ - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-warmdream-180x200-hq.html?srsltid=AfmBOooW7KfRC6Ij-wofnUSinnJg8MTk4bWfKMnzMqokJn4guRa2RRNi
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -27,9 +27,9 @@ title = 常識科
 url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpageid=44&cpmid=176&rurl=https://xn--b1aecnalzhcpg.xn--p1ai/9825461fe43y
 
 [demxanh.com]
-match = -3.6%%
-title = Bộ ga gối chun chần Misuko Tencel Rio 02
-url = https://demxanh.com/bo-ga-goi-chun-chan-misuko-tencel-rio-02.html?srsltid=AfmBOoqGplNP02sDAT70OH_IIrzjSSN-OkLjeQ0LW5fD1VCsUON39gWg
+match = -17.9%%
+title = Ga gối Sông Hồng Basic cotton BC21035 150x190
+url = https://demxanh.com/ga-goi-song-hong-basic-cotton-bc21035.html?srsltid=AfmBOorWDyPcZFyphhrBnnAhR4BTgtaQ_dKoMYV1C2ol6Z7tz7GYPfId
 
 [stevematuro.com]
 match = -39.3%%
