--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-11 06:18:23
+lastsearch = 2024-08-11 06:54:51
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/list/giường xếp
 [sofatoanquoc.com]
 match = 30.0%%
 title = Giường ngủ bọc da mã 15
-url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html?srsltid=AfmBOoopDUAJIYrR9qyQDqs6ofk6DNvo1bE3q16HgwPBcRuptmLGI59H
 
 [noithathoaphat360.com]
 match = -55.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -115.0%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu? - Everon
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoqSh06IZqJs6Bpe2_GIOxM40PxL2h_-sxADzHFKHwd1hVTJ-hqp
 
 [noithatgiakhanh.net]
 match = -105.0%%
