--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-11 09:50:02
+lastsearch = 2024-08-11 10:18:14
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -337,8 +337,8 @@ title = ĐẠI LÝ GIAO NƯỚC TẬN NHÀ QUẬN BÌNH THẠNH, LAVIE ...
 url = https://iwater.vn/tin-thi-truong/iwater-dai-ly-giao-nuoc-tan-nha-khach-hang-thuoc-du-an-la-bonita-so-6-8-duong-d2-phuong-15-quan-binh-thanh-tphcm-13453.html
 
 [www.axel-gl.com]
-match = -240.0%%
-title = ［Đã ngừng］HARWIN D2 2,54 mm, 15,24 mm Pitch dọc 28 cách ...
+match = -206.7%%
+title = ［Đã ngừng］HARWIN D2 2,54 mm, 15,24 mm Pitch dọc 28 ...
 url = https://www.axel-gl.com/vi-vn/asone/d/64-2588-77/
 
 [thtanthanh.phubinh.edu.vn]
@@ -460,4 +460,14 @@ url = https://jumparena.vn/blogs/news/top-cac-dia-diem-leo-nui-da-nhan-tao-trong
 match = -173.3%%
 title = Apartment vacation rentals in Phú Thuận - Airbnb
 url = https://www.airbnb.com.mt/phu-thuan-vietnam/stays/apartments
+
+[thudaumot.binhduong.gov.vn]
+match = -233.3%%
+title = Công bố Quyết định phê duyệt Quy hoạch chi tiết xây dựng ...
+url = https://thudaumot.binhduong.gov.vn/chi-tiet?id=ART240700000115
+
+[vinafood2.com.vn]
+match = 14.3%%
+title = Cơ cấu tổ chức
+url = https://vinafood2.com.vn/featured_item/co-cau-to-chuc/
 
