--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-11 06:47:37
+lastsearch = 2024-08-11 10:15:49
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -39,7 +39,7 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 [everon.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOoquvKsktG8Cey7QRb6EGNkjfzSJL1ydenLTiWJO0jHCrUesHy_N
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
 
 [dailyeveron.vn]
 match = -66.7%%
@@ -114,7 +114,7 @@ url = https://m.facebook.com/p/Nam-phuongshop-100023919678729/
 [www.everonvni.vn]
 match = 0.0%%
 title = BỘ CHĂN GA GỐI CÁNH ĐỒNG NẮNG - EST24035
-url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/?srsltid=AfmBOoqVhFDZ_mZxGFGbVZIxH2g1ck9YM8DUaj8oQwMWXum_DK78-VEH
+url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 
 [lasantevn.com]
 match = -66.7%%
