--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-11 05:40:49
+lastsearch = 2024-08-11 10:25:49
 
 [scholar.google.com]
 match = -43.8%%
@@ -32,9 +32,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [moveek.com]
-match = -175.0%%
-title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cinestar-kien-giang/
+match = -181.2%%
+title = Rạp Cinestar Hai Bà Trưng - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cinestar-hai-ba-trung/
 
 [nhandan.vn]
 match = -62.5%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -18.8%%
-title = Lịch chiếu phim Lotte Cinema
-url = https://www.momo.vn/cinema/rap/lotte-cinema
+match = -37.5%%
+title = Lịch chiếu phim Lotte West Lake
+url = https://www.momo.vn/cinema/rap/lotte-cinema/lotte-west-lake-363
 
 [baotintuc.vn]
 match = -37.5%%
