CI images update

--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -19,7 +19,7 @@ url = https://thegioidemviet.vn/chan-dong-long-vu-muji/
 [demxanh.com]
 match = -135.7%%
 title = Chăn tuyết Muji 01 | Chăn lông tuyết cao cấp
-url = https://demxanh.com/chan-tuyet-muji-01.html?srsltid=AfmBOorBH1hCJ3a82ta-I3uInhnK_vQehkmTHBU49C8hS64WRgVBntue
+url = https://demxanh.com/chan-tuyet-muji-01.html
 
 [www.youtube.com]
 match = -14.3%%
@@ -37,9 +37,9 @@ title = Chăn lông tuyết muji mềm mại 2 lớp xuất nhật loại ...
 url = https://h5.lazada.vn/products/chan-long-tuyet-muji-mem-mai-2-lop-xuat-nhat-loai-long-mem-kich-thuoc-2mx2m3-nang-19kg-i1972993216.html
 
 [russo.vn]
-match = -107.1%%
-title = Chiếc chăn lông cừu muji chính hãng - Russo
-url = https://russo.vn/chiec-chan-long-cuu-muji/
+match = -178.6%%
+title = Chăn Blanket chính hãng tốt nhất hiện nay - Russo
+url = https://russo.vn/chan-long-tho-muji-4kg/
 
 [coda.io]
 match = -164.3%%
