--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-11 03:34:06
+lastsearch = 2024-08-11 10:36:50
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 4.3%%
-title = Bộ sản phẩm SH_BC23 082
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-082
+match = 0.0%%
+title = Bộ sản phẩm SH_BC22 057
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH07
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh07
+match = -10.5%%
+title = Bộ Chăn Ga Gối Eu04
+url = https://antbedding.com/bo-chan-ga-goi-eu04
 
 [shopee.vn]
 match = -2.9%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
@@ -107,9 +107,9 @@ title = Everon Quảng Bình Bộ chăn bốn mùa EPC21053 180x200
 url = https://www.everonqb.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [changagoidemsonghong.online]
-match = 18.2%%
-title = Ga gối Sông Hồng basic TC BC24107
-url = https://changagoidemsonghong.online/ga-goi-song-hong-basic-bc24107.html
+match = 14.7%%
+title = Ga gối Sông Hồng Basic cotton BC24C07
+url = https://changagoidemsonghong.online/ga-goi-song-hong-basic-cotton-bc24c07.html
 
 [everonvn.com.vn]
 match = -23.5%%
