--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-11 04:33:29
+lastsearch = 2024-08-11 10:33:17
 
 [silverwow.net]
 match = -255.6%%
@@ -87,9 +87,9 @@ title = Cheong Chan Cooking Caramel 3kg
 url = https://www.borong.com/v/borong-runcit/product/Cheong-Chan-Cooking-Caramel-3kg/111627
 
 [www.mycs.com.my]
-match = -366.7%%
-title = CHEONG CHAN Elephant Cooking Caramel Sauce 6 x ...
-url = https://www.mycs.com.my/cheong-chan-elephant-cooking-caramel-sauce-6-x-3kg-carton-19556191040625
+match = -322.2%%
+title = CHEONG CHAN Elephant Cooking Caramel Sauce 3kg
+url = https://www.mycs.com.my/cheong-chan-elephant-cooking-caramel-sauce-3kg-9556191040628
 
 [www.supplybunny.com]
 match = -366.7%%
@@ -219,7 +219,7 @@ url = https://www.itshot.com/jewelry/education-guides/strongest-chains
 [mightydepot.com]
 match = -377.8%%
 title = Chung John Wong Sun Chan pepper 3kg Korean food ...
-url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_?srsltid=AfmBOoqdbSEjohW3maJ6-E9N4A_p5zBUEgHctXVRa94gXQZmAztJPpb8
+url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_
 
 [s.click.aliexpress.com]
 match = -444.4%%
