--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-08-11 04:21:04
+lastsearch = 2024-08-11 10:31:51
 
 [www.instagram.com]
 match = -6.7%%
@@ -37,9 +37,9 @@ title = Dr CHAN Hoi Huen
 url = https://www.eduhk.hk/ses/web_uat/staff_detail.php?id=60&name=chanhh
 
 [en.wikipedia.org]
-match = 6.7%%
-title = Cantonese profanity
-url = https://en.wikipedia.org/wiki/Cantonese_profanity
+match = -66.7%%
+title = List of common Chinese surnames
+url = https://en.wikipedia.org/wiki/List_of_common_Chinese_surnames
 
 [www.soc.cuhk.edu.hk]
 match = 50.0%%
@@ -305,4 +305,9 @@ url = https://hub.hku.hk/rp/rp00498
 match = -13.3%%
 title = CHAN Hoi Huen 陳凱萱
 url = https://repository.eduhk.hk/en/persons/hoi-huen陳凱萱-chan
+
+[www.forbes.com]
+match = -20.0%%
+title = China's 100 Richest 2023
+url = https://www.forbes.com/lists/china-billionaires/
 
