--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-11 06:47:58
+lastsearch = 2024-08-11 10:42:43
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -117,9 +117,9 @@ title = Cuốn thư đá 14 - Đá mỹ nghệ Ninh Bình
 url = https://trongdoitam1.mysapo.net/cuon-thu-da-14
 
 [www.dkn.tv]
-match = -21.4%%
-title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
-url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
+match = -60.7%%
+title = Điều gì đã gây nên trận Đại Hồng Thủy nổi tiếng trong lịch ...
+url = https://www.dkn.tv/khoa-hoc-cong-nghe/dieu-gi-da-gay-nen-tran-dai-hong-thuy-noi-tieng-trong-lich-su-vien-co.html
 
 [thuvienhoasen.org]
 match = -100.0%%
@@ -152,9 +152,9 @@ title = VAN 1 CHIỀU XANH ĐÀI LOAN
 url = http://www.tapdoandaiviet.net/van-1-chieu-xanh-dai-loan
 
 [lynhstore.net]
-match = -53.6%%
-title = Viên uống tiền mãn kinh Kobayashi Inochi no Haha Nhật Bản
-url = https://lynhstore.net/san-pham/vien-uong-tien-man-kinh-kobayashi-inochi-no-haha-nhat-ban/
+match = -71.4%%
+title = Tỏi tiêm Nhật Bản Alinamin F50 - 20ml x50 ống - giúp phục ...
+url = https://lynhstore.net/san-pham/toi-tiem-nhat-ban-alinamin-f50-20ml-x50-ong/
 
 [www.beemart.vn]
 match = 14.3%%
