--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-11 06:55:12
+lastsearch = 2024-08-11 10:39:18
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -37,8 +37,8 @@ title = HT Chiếu Sáng
 url = https://www.dienotobinhdinh.com/ht-chieu-sang/
 
 [www.facebook.com]
-match = -140.0%%
-title = Chiếu tăm cây H&T khẳng định thương hiệu trên ...
+match = -186.7%%
+title = Cộng đồng cư dân Bát Tràng | Chiếu tăm cây H&T khẳng ...
 url = https://www.facebook.com/groups/664918127312487/posts/chiếu-tăm-cây-ht-khẳng-định-thương-hiệu-trên-thị-trường-freeshiplh-0963-658-905-/1872701319867489/
 
 [rangdong.com.vn]
@@ -94,7 +94,7 @@ url = https://m.facebook.com/groups/648618483681727/posts/852387779971462/
 [www.diepxuan.com]
 match = -13.3%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOoqGQ3PZovcoP2cUaf8-nFDbvd-rnLX-6uPeIed7G5y7oD8ab8lY
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOooO_kKR5S2gABBafUHJXKTRoV1YT-nRKIw3cQ0y7kf-1djUtqs6
 
 [huongtruc.com]
 match = -213.3%%
@@ -119,7 +119,7 @@ url = https://www.htv.com.vn/lich-phat-song
 [congnghehoangtien.com]
 match = -133.3%%
 title = Đèn Led Năng Lượng Mặt Trời Sân Vườn HT-SL10
-url = https://congnghehoangtien.com/san-pham/den-led-nang-luong-mat-troi-san-vuon-ht-sl10/
+url = https://congnghehoangtien.com/san-pham/den-led-nang-luong-mat-troi-san-vuon-ht-sl10/?srsltid=AfmBOoo2UkJUCGdyehn7ekLQQNTUaTbL7h-meJCxEf0hNLFalQqPs8hu
 
 [www.otosaigon.com]
 match = -86.7%%
