--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-08 13:35:13
 
 [search]
-lastsearch = 2024-08-11 03:31:21
+lastsearch = 2024-08-11 10:46:11
 
 [shopee.vn]
 match = -115.0%%
@@ -12,9 +12,9 @@ title = 160x200 ; 180x200 ; 200x220 - Chiếu Tăm H&T Hương Trúc
 url = https://shopee.vn/Chiếu-Tăm-H-T-Hương-Trúc-Kích-thước-120x190-150x190-160x200-180x200-200x220-i.752854860.22042172270
 
 [www.diepxuan.com]
-match = -10.0%%
-title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
+match = 35.0%%
+title = Điệp Xuân Chiếu cây HT 180x200
+url = https://www.diepxuan.com/chieu-cay-ht-180x200.html
 
 [chuyenhangviet.com]
 match = -90.0%%
