--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-11 05:27:37
+lastsearch = 2024-08-11 10:34:20
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOopJwTlc8OJACC5SgM_ovlmqUrEZQe5ZZPaVzl6EbPKvPOJvnRg9
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
 match = -6.7%%
@@ -77,9 +77,9 @@ title = Code Huyền Thoại Hải Tặc mới nhất (cập nhật 14/06/2024)
 url = https://www.nguyenkim.com/code-hai-tac-dai-chien.html
 
 [htlight.vn]
-match = -26.7%%
-title = CẦN ĐÈN ĐÔI CK14 - HTLIGHT
-url = https://htlight.vn/can-den-doi-ck14.html
+match = 6.7%%
+title = ĐÈN LED - HTLIGHT
+url = http://htlight.vn/
 
 [saigontourist.edu.vn]
 match = -120.0%%
