--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -112,9 +112,9 @@ title = HR - TUYỂN DỤNG | Công ty Logistic
 url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8418762821481024/
 
 [ketoananpha.vn]
-match = -95.8%%
-title = Cách kê khai & tính thuế cho thuê tài sản - V/dụ về thuê nhà
-url = https://ketoananpha.vn/tinh-thue-cho-thue-tai-san.html
+match = -87.5%%
+title = Hướng dẫn quyết toán thuế thu nhập doanh nghiệp Thông ...
+url = https://ketoananpha.vn/cach-lap-to-khai-quyet-toan-thue-tndn.html
 
 [www.instagram.com]
 match = -70.8%%
