--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-11 05:35:59
+lastsearch = 2024-08-11 10:35:02
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorbnyoCHipeV0ta-Mtul9r4OwPVAYd0N8Dem2w8ABSyvRtHWjyq
 
 [shopee.vn]
 match = -25.0%%
@@ -57,9 +57,9 @@ title = Chiếu Trúc Hạt Đen Không Viền - Hà Nội
 url = https://thegioidemviet.vn/chieu-truc-hat-den-khong-vien/
 
 [noithatbamboo.vn]
-match = 14.3%%
-title = Chiếu trúc mắt mai không viền màu vàng 120x190cm
-url = https://noithatbamboo.vn/chieu-truc-hat-1m2/chieu-truc-mat-mai-khong-vien-mau-vang-120x190cm.html
+match = 17.9%%
+title = Chiếu trúc mắt mai không viền màu vàng 80x190cm
+url = https://noithatbamboo.vn/chieu-truc-hat-8-tac/chieu-truc-mat-mai-khong-vien-mau-vang-80x190cm.html
 
 [www.lazada.vn]
 match = 3.6%%
@@ -72,9 +72,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [www.youtube.com]
-match = 7.1%%
-title = Top 3 Chiếu Trúc mùa hè hot nhất tại Đệm Xanh
-url = https://www.youtube.com/watch?v=HfaucbE1OKk
+match = 20.0%%
+title = Review chiếu trúc hạt đen
+url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
 
 [vongxepsaigon.vn]
 match = 3.6%%
