--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-11 05:38:43
+lastsearch = 2024-08-11 10:45:06
 
 [www.lazada.vn]
 match = -44.4%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -144.4%%
-title = Hoa Quả Ưu Đàm - NEM CHUA RÁN HUTA cho các tín đồ ...
-url = https://www.facebook.com/hoaquauudam/posts/nem-chua-rán-huta-cho-các-tín-đồ-ăn-vặt-55k-1-hộp-400gr-15-cái-nem-em-đặt-thì-nh/750337347135350/
+match = -61.1%%
+title = NEM Fashion - ÁO KHOÁC LÔNG VŨ SIÊU NHẸ
+url = https://www.facebook.com/nemfashion.official/posts/áo-khoác-lông-vũsiêu-nhẹ-siêu-ấm-chỉ-từ-𝟏𝟏𝟗𝟗𝐊-với-xu-thế-phát-triển-của-thời-tra/1942429895894902/
 
 [voz.vn]
 match = 11.1%%
