--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-11 08:09:28
+lastsearch = 2024-08-11 10:31:10
 
 [demxanh.com]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 5
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [thegioidemonline.vn]
-match = -109.1%%
-title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội - Chăn ga gối
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
+match = -50.0%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -77,9 +77,9 @@ title = Kệ Đỡ Nệm Lò Xo Kim Cương Divan Asling - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-kim-cuong-divan-asling
 
 [vikicare.com]
-match = -27.3%%
-title = Thảm Đá Nóng Carefit Đá Tourmaline CFM 120
-url = https://vikicare.com/tham-da-nong-carefit-da-tourmaline-cfm-120-kich-thuoc-120x190-cm/
+match = 13.6%%
+title = thảm đá nhiệt nóng - Vikicare
+url = https://vikicare.com/product-tag/tham-da-nhiet-nong/
 
 [www.linkedin.com]
 match = -86.4%%
