--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-08-11 09:31:57
+lastsearch = 2024-08-11 11:22:46
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -19,12 +19,12 @@ url = https://everon.online/collections/chan-bon-mua-everon
 [www.diepxuan.com]
 match = -3.6%%
 title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
+url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html?srsltid=AfmBOop3moT41C37Bme9UXhUkzAAmErpXEmJbpI3Vz9xaVKBAlHKN9oh
 
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOorcNsCKFWzjXzeuZZBHg1zgEPqMl04znds9c0IAr4Kd2YkvQnzR
 
 [everonminhkhai.com]
 match = -26.7%%
@@ -89,7 +89,7 @@ url = https://demolympia.com/dem-bon-mua-olympia/
 [diepxuan.com]
 match = -10.5%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/
+url = https://diepxuan.com/?srsltid=AfmBOoqKPfdcAtTTY-Gk8Tth7VJkFF3L7tAa7u3LVtppRCBao3Dbdl2x
 
 [dem24h.vn]
 match = -25.0%%
