--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-11 10:35:02
+lastsearch = 2024-08-11 11:24:29
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorbnyoCHipeV0ta-Mtul9r4OwPVAYd0N8Dem2w8ABSyvRtHWjyq
+url = https://demxanh.com/chieu-truc.html
 
 [shopee.vn]
 match = -25.0%%
