--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-11 09:21:27
+lastsearch = 2024-08-11 11:30:41
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -12,9 +12,9 @@ title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -66.7%%
-title = Ga phủ EPM19043 180x200 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
+match = -38.1%%
+title = Everon Quảng Bình Bộ ga phủ EPCARLESS 160x200
+url = https://www.everonqb.com/bo-ga-phu-epcarless-160x200.html
 
 [www.diepxuan.com]
 match = -19.0%%
@@ -22,13 +22,13 @@ title = Chiếu cây HT 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [muathongminh.vn]
-match = -66.7%%
-title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
-url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
+match = -28.6%%
+title = Lịch sử giá Bộ ga phủ everon esm-21012
+url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
 
 [beecost.vn]
-match = -176.2%%
-title = Lịch sử giá Srm set chăn ga gối 5 món cotton living drap hàn ...
+match = -147.6%%
+title = Srm set chăn ga gối 5 món cotton living drap hàn quốc ...
 url = https://beecost.vn/srm-set-chan-ga-goi-5-mon-cotton-living-drap-han-quoc-ga-phu-giuong-chan-bong-day-cao-cap-he-thong-n-p.1__9631034161__146302121
 
 [www.reef2reef.com]
