--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-11 06:45:30
+lastsearch = 2024-08-11 11:17:19
 
 [www.gov.uk]
 match = 0.0%%
@@ -838,7 +838,7 @@ url = https://www.boston25news.com/homepage
 
 [publicaccess.courts.state.mn.us]
 match = -166.7%%
-title = Minnesota Court Records Online (MCRO): Home Page
+title = Home Page - Minnesota Court Records Online (MCRO)
 url = https://publicaccess.courts.state.mn.us/
 
 [thepowerrank.com]
