--- a/images/nem-diamold-re-200x220x09/config.ini
+++ b/images/nem-diamold-re-200x220x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-diamold-re-200x220x09.html
 lastopen = 2024-06-10 11:11:36
 
 [search]
-lastsearch = 2024-08-11 10:24:26
+lastsearch = 2024-08-11 11:28:01
 
 [www.youtube.com]
 match = -104.0%%
-title = Quick Tip: Testing For Real or Fake Diamonds using Diamond ...
-url = https://www.youtube.com/watch?v=DBq71whDU1g
+title = How to Check if a Diamond is Real using Diamond Selector II ...
+url = https://www.youtube.com/watch?v=YTa8GElhiTU
 
 [www.diamonds.pro]
 match = 0.0%%
