--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-11 01:56:41
+lastsearch = 2024-08-11 11:20:20
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOopFIVtnbt0tXIGRg8Yi4aZmjsybfmGJ1YQ_8s7plBaDvztETkTe
 
 [www.facebook.com]
 match = -5.6%%
@@ -54,12 +54,12 @@ url = https://www.tiktok.com/discover/nem-nuong-air-fryer?lang=en
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOopidClXr3GB5-BmVArNH8uSPtflRA5MAGqcR6_drJvZdZW-S_-D
 
 [m.facebook.com]
-match = -122.2%%
-title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [emartmall.com.vn]
 match = 0.0%%
