--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-11 10:41:02
+lastsearch = 2024-08-11 11:28:41
 
 [demxanh.com]
 match = 18.2%%
 title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html?srsltid=AfmBOooGlGLusILctwZXQozonv1EKral_ALePAcJq9ev5v38CN2K-73d
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 7
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
+title = Thảm ghế thảm giường - Trang 3
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=3
 
 [decoviet.vn]
 match = 22.2%%
@@ -34,7 +34,7 @@ url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoomLQvCco4k-iLfaDFZA3Dq7MV4Ju5kyeaqIa9Mt2w2tlu_ZCS5
 
 [flexhouse.vn]
 match = -90.9%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+match = 36.4%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOopg97sVf1TMBvkfWO8FEZAVXz01S-zA7Ij45TPxdcBKbpCOPCMG
 
 [www.lazada.vn]
 match = -77.3%%
