--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-11 06:52:46
+lastsearch = 2024-08-11 11:23:49
 
 [www.tiktok.com]
-match = -187.5%%
-title = Loved meeting you guys!!! @Shab & Kassie 🥰🥰🥰🥰 We have ...
-url = https://www.tiktok.com/@hudabeauty/video/7381189370025364767
+match = -162.5%%
+title = First impressions of @NARS Cosmetics POWERMATTE ...
+url = https://www.tiktok.com/@racheljthomson/video/7246020826531712283
 
 [digitalmaine.com]
 match = -75.0%%
@@ -32,9 +32,9 @@ title = Nhu shop | Binh Dinh
 url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 
 [www.diepxuan.com]
-match = -68.8%%
-title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [diepxuan.com]
 match = 6.2%%
@@ -127,9 +127,9 @@ title = A little patina update on my caper green kudu Chelsea ...
 url = https://www.instagram.com/boots_tagram23/p/C8kypfiPAue/
 
 [www.facebook.com]
-match = -68.8%%
-title = Siaran Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/posts/4840270546027657/?locale=ms_MY
+match = -25.0%%
+title = Chăn ga gối đệm Điệp Xuân
+url = https://www.facebook.com/diepxuanco/
 
 [www.espn.com]
 match = -93.8%%
@@ -329,7 +329,7 @@ url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html
 [shopee.vn]
 match = -212.5%%
 title = bo-5-da-nang-chot-dieu-chinh-di-dong-magic-mieng-dan- ...
-url = https://shopee.vn/search?keyword=bo-5-da-nang-chot-dieu-chinh-di-dong-magic-mieng-dan-da-nang-the-thao-xe-dap-co-dinh-day-deo/5710880420355262302/3502170206813664485/ 
+url = https://shopee.vn/search?keyword=bo-5-da-nang-chot-dieu-chinh-di-dong-magic-mieng-dan-da-nang-the-thao-xe-dap-co-dinh-day-deo/5710880420355262302/3502170206813664485/
 
 [metric.vn]
 match = -200.0%%
