CI images update

--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -12,14 +12,14 @@ title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
 url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
 
 [chieutrelanlan.com]
-match = -76.2%%
-title = Chiếu trúc mắt nhỏ không viền màu trắng 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-160x190cm-14.html
+match = -71.4%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [nemsaithanh.com]
-match = 57.9%%
-title = Chiếu Trúc Các Loại
-url = https://nemsaithanh.com/chieu-truc-cac-loai/
+match = -10.0%%
+title = Chiếu Trúc
+url = https://nemsaithanh.com/chieu-truc-103.html
 
 [trangvangvietnam.com]
 match = -61.9%%
