--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-11 05:37:41
+lastsearch = 2024-08-11 11:55:47
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -579,7 +579,7 @@ url = https://rtrlaw.com/real-estate-law/what-are-the-changes-being-made-to-flor
 [didongviet.vn]
 match = -147.1%%
 title = Tải ngay hình nền hoa đẹp cho iPhone chất lượng cao nhất
-url = https://didongviet.vn/dchannel/hinh-nen-hoa-dep-cho-iphone/?srsltid=AfmBOorrGRz6wo8VFb1SvoLX3xoOVVB4Hg1nvdwoQQkuKPI7UjhBjVjH
+url = https://didongviet.vn/dchannel/hinh-nen-hoa-dep-cho-iphone/
 
 [www.hud.gov]
 match = -205.9%%
@@ -725,4 +725,9 @@ url = https://fptshop.com.vn/tin-tuc/thu-thuat/cach-chup-anh-dep-tren-iphone-14-
 match = -129.4%%
 title = Những màn pháo hoa 2019 nghệ thuật đẹp nhất thế giới
 url = https://tienphong.vn/nhung-man-phao-hoa-2019-nghe-thuat-dep-nhat-the-gioi-post1082196.tpo
+
+[24hstore.vn]
+match = -135.3%%
+title = 199+ Hình nền hoa mẫu đơn đẹp nhất, rạng rỡ, THU HÚT
+url = https://24hstore.vn/huong-dan-ky-thuat/hinh-nen-hoa-mau-don-n8444
 
