--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-11 11:18:59
+lastsearch = 2024-08-11 11:50:59
 
 [www.everonvn.vn]
 match = 80.8%%
@@ -17,9 +17,9 @@ title = Điệp Xuân Nệm lò xo Everon Pocket 18
 url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 
 [everon.online]
-match = -26.9%%
-title = Bảng Giá Đệm Lò Xo Everon, Đệm Lò Xo Mỹ King Koil ...
-url = https://everon.online/collections/dem-lo-xo-everon
+match = -42.3%%
+title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
+url = https://everon.online/collections/dem-everon
 
 [demchinhhang.com]
 match = 80.8%%
