--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-11 10:16:10
+lastsearch = 2024-08-11 12:01:14
 
 [hanvico.com.vn]
 match = 33.3%%
@@ -33,13 +33,13 @@ url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
 match = -28.6%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
-url = https://changagoidemsonghong.com/chan-ga-goi-bc63
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
+url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [songhong.info]
-match = -19.0%%
-title = Chăn ga gối Sông Hồng dòng Basic mã BC-14
-url = https://songhong.info/chan-ga-goi-bc14
+match = -28.6%%
+title = Bộ chăn ga gối cao cấp Urban mã UC22-020 -
+url = https://songhong.info/chan-ga-goi-uc020
 
 [demxanh.com]
 match = -52.4%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V14 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v14
+url = https://foreverbedding.net/bo-ga-chun-velina-v14?srsltid=AfmBOorHMA6S_XpZ8NG35nMWw7DvERq4s7EW-yQWTj1n8RGLSC-oh0_P
 
 [changmibedding.com]
 match = -33.3%%
