--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-11 10:39:18
+lastsearch = 2024-08-11 11:51:18
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -93,8 +93,8 @@ url = https://m.facebook.com/groups/648618483681727/posts/852387779971462/
 
 [www.diepxuan.com]
 match = -13.3%%
-title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOooO_kKR5S2gABBafUHJXKTRoV1YT-nRKIw3cQ0y7kf-1djUtqs6
+title = Chiếu cây HT 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [huongtruc.com]
 match = -213.3%%
