--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-08-11 10:21:19
+lastsearch = 2024-08-11 11:56:29
 
 [shopee.vn]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://www.maihuyencorp.com/
 [www.lazada.vn]
 match = -13.8%%
 title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
-url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html?srsltid=AfmBOorzum7e6YVX1OaKF_t8VjTsMRX1yFjC4O__eko0VB-17tnRPcVf
+url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html
 
 [tiki.vn]
 match = -13.8%%
