--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-08-11 10:44:44
+lastsearch = 2024-08-11 11:52:43
 
 [demxanh.com]
 match = -94.1%%
@@ -32,9 +32,9 @@ title = Bảng Giá tháng 4-5/2024 | Chiếu Trúc Hạt Đen | GIÁ TỐT ✅
 url = https://thegioidemviet.vn/chieu-truc-hat-den/
 
 [shopee.vn]
-match = -105.9%%
-title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
-url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
+match = -35.3%%
+title = Chiếu trúc hạt đen không viền loại đẹp
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-loại-đẹp-i.270303342.9119500161
 
 [vongxepsaigon.vn]
 match = -129.4%%
@@ -57,9 +57,9 @@ title = Chiều tre trúc loại 1 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiều tre trúc loại 1
 
 [chanrathanhthuy.com]
-match = -117.6%%
-title = Chiếu Trúc Đen Khác Với Chiếu Trúc Vàng Như Thế Nào?
-url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-den-khac-voi-chieu-truc-vang-nhu-the-nao-476.html
+match = 23.5%%
+title = Chiếu Trúc Giá Bao Nhiêu?
+url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.youtube.com]
 match = -158.8%%
