--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-11 05:45:05
+lastsearch = 2024-08-11 11:46:11
 
 [burningman.org]
 match = 0.0%%
@@ -82,8 +82,8 @@ title = Bulova Official Site | Bulova
 url = https://www.bulova.com/us/en/
 
 [www.ksat.com]
-match = -57.1%%
-title = KSAT 12
+match = -233.3%%
+title = San Antonio News, Texas News, Sports, Weather from KSAT ...
 url = https://www.ksat.com/
 
 [marijuana-anonymous.org]
@@ -893,7 +893,7 @@ url = https://californiacourtrecords.us/criminal-court-records/inmate/
 
 [publicaccess.courts.state.mn.us]
 match = -166.7%%
-title = Minnesota Court Records Online (MCRO): Home Page
+title = Home Page - Minnesota Court Records Online (MCRO)
 url = https://publicaccess.courts.state.mn.us/
 
 [www.ussoccer.com]
