--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-11 08:02:27
+lastsearch = 2024-08-11 11:47:34
 
 [www.bible.com]
-match = 26.7%%
-title = thufingte 20:22
-url = https://www.bible.com/bible/253/PRO.20.22.MIZOVBSI
+match = -94.1%%
+title = ISAIA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/ISA.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -33,8 +33,8 @@ url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vie
 
 [www.churchofjesuschrist.org]
 match = -200.0%%
-title = 3 Nifai 5 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/3-ne/5?lang=tpi
+title = 1 Nifai 7 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/7?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = -23.5%%
-title = What does Matthew 20:22 mean?
+match = 0.0%%
+title = 
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
@@ -64,7 +64,7 @@ url = https://www.biblestudytools.com/commentaries/gills-exposition-of-the-bible
 [www2.census.gov]
 match = -129.4%%
 title = 1930 Census: Alphabetical index of occupations
-url = https://www2.census.gov/library/publications/decennial/1930/occupation-indexes/occupation-index-alpha-05.pdf
+url = https://www2.census.gov/library/publications/decennial/1930/occupation-indexes/occupation-index-alpha-06.pdf
 
 [www.tiktok.com]
 match = -158.8%%
@@ -204,7 +204,7 @@ url = https://ulele.com/
 [www.nothingbundtcakes.com]
 match = -94.1%%
 title = Nothing Bundt Cakes: Delicious Bundt Cakes
-url = https://www.nothingbundtcakes.com/
+url = https://www.nothingbundtcakes.com/?srsltid=AfmBOooWFZbdzXwicaF6DsgA4PO1dByzIQeQrfi4VDW6cI_-37x7tfJT
 
 [events.stanford.edu]
 match = -82.4%%
