CI images update

--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-11 11:46:11
+lastsearch = 2024-08-11 13:21:21
 
 [burningman.org]
 match = 0.0%%
@@ -728,7 +728,7 @@ url = https://www.reno.gov/
 
 [www.medicaid.gov]
 match = -260.0%%
-title = Medicaid.gov: the official U.S. government site for Medicare ...
+title = Medicaid.gov: The Official U.S. Government Site for Medicaid ...
 url = https://www.medicaid.gov/
 
 [apps.apple.com]
@@ -1235,4 +1235,9 @@ url = http://www.minjust-rso.org/appJSdv7xYKvr
 match = -206.7%%
 title = Morgan State University - Maryland's Preeminent Urban ...
 url = https://www.morgan.edu/
+
+[www.bhc.edu]
+match = -26.7%%
+title = Black Hawk College: Home
+url = https://www.bhc.edu/
 
