--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-08-11 12:15:25
+lastsearch = 2024-08-11 13:19:57
 
 [thegioidemviet.vn]
 match = 32.1%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/chieu-truc-p17.html
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorGaEAZGrmWUr5j-VfmVmKnRAvrVMPIJEYlxtNP6mjmoqNkUPQu
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooTPQ-7VQWDrIiDSOga_oFgD1cxXmqG1gfVGjRlv_0Z8ljogIZs
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -44,7 +44,7 @@ url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-c
 [www.lazada.vn]
 match = 35.7%%
 title = Chiếu trúc hạt vàng loại tốt-quế lâm 1
-url = https://www.lazada.vn/products/chieu-truc-hat-vang-loai-tot-que-lam-1-i1312554042.html?srsltid=AfmBOopDU5NTRQtDPAayq0Rzs-hXxorU2rKDJjKS5HzkWJDR7rHs2kEG
+url = https://www.lazada.vn/products/chieu-truc-hat-vang-loai-tot-que-lam-1-i1312554042.html?srsltid=AfmBOoo2iyILG913urqu_4sgbb3Ga43c6q5dwvN7jR8lxNuh7dUwfxhh
 
 [thegioidemonline.com]
 match = -39.3%%
@@ -72,8 +72,8 @@ title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
 url = https://www.youtube.com/watch?v=8i3SOv4E4eo
 
 [sieuthinguyenkim.com]
-match = -35.7%%
-title = Chiếu Quế lâm - Chiếu | Siêu thị điện máy Nguyễn Kim
+match = -10.7%%
+title = Chiếu Quế lâm - Siêu Thị Điện Máy Nguyễn Kim
 url = https://sieuthinguyenkim.com/chieu-que-lam-nsh4041837720.html
 
 [caobanggreen.vn]
