--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-11 12:32:00
+lastsearch = 2024-08-11 13:18:10
 
 [tuananh.vn]
 match = -72.7%%
@@ -14,7 +14,7 @@ url = https://tuananh.vn/dem-bong-ep-c51.html
 [demxanh.com]
 match = -48.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOorPylCkVH2U7xrnicLat58i3Eu5Pf5e4Ixh2iKAAgvI9QK970rr
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = -40.0%%
@@ -74,7 +74,7 @@ url = https://www.facebook.com/photo.php?fbid=761361566019611&id=100064373242328
 [demviethome.vn]
 match = -40.0%%
 title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOoohyt49O7DZ3i0xKNEdXiVBBgUWS0jzYseg3_Jw4VzNs4wT20xx
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
 
 [m.facebook.com]
 match = -72.0%%
