--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-11 00:25:18
+lastsearch = 2024-08-11 13:22:38
 
 [everonvn.com.vn]
-match = -11.1%%
-title = Vỏ Gối Everon Guardian Giảm Giá
-url = https://everonvn.com.vn/everon/2269/vo-goi-everon-guardian
+match = -94.4%%
+title = Bộ Everon Ep 1738 - chăn ga gối đệm Everon
+url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738?srsltid=AfmBOopq-TliPb7E_4limzqje6zGFhSeURLmeV43eakGCaoG0XjwlYRz
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOoqnERq5TBTg4lAV_ciaV0ZHAwZvSbuYra42zHjQVJQd2x7c0hGP
 
 [www.reddit.com]
 match = -150.0%%
@@ -33,13 +33,13 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 
 [www.diepxuan.com]
 match = 11.1%%
-title = Điệp Xuân Vỏ gối EP1818 45x65
-url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html
+title = Điệp Xuân Vỏ gối EP1812 45x65
+url = https://www.diepxuan.com/vo-goi-ep1812-45x65.html?srsltid=AfmBOop2WmETl8sTzITxPxQa75dPQem8Jc3BlW99J5wMpdiV_vnSV7Zc
 
 [www.everonqb.com]
-match = -111.1%%
-title = Vỏ gối EPC19056 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epc19056-45x65.html
+match = -100.0%%
+title = Vỏ gối ES1801 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-es1801-45x65.html
 
 [shopee.vn]
 match = -127.8%%
