--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-11 09:35:46
+lastsearch = 2024-08-11 13:37:49
 
 [demxanh.com]
-match = 43.5%%
-title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
+match = -3.3%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOor8bfN4Ohk3zAfkQc7x1YRjANJlcJvvRu4jSFG-jfheZncMzzR1
 
 [suongtuyet.com]
 match = -13.3%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/?srsltid=AfmBOoqfM1jmIToRsc67cDWrfNehYV5QwZZI7F4akpTMOr3icBtDyiJ6
 
 [www.dienmayxanh.com]
 match = -36.7%%
