--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-11 11:40:44
+lastsearch = 2024-08-11 13:41:39
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -12,14 +12,14 @@ title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
 url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
 
 [chieutrelanlan.com]
-match = -71.4%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
+match = -76.2%%
+title = Chiếu trúc mắt nhỏ không viền màu trắng 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-160x190cm-14.html
 
 [nemsaithanh.com]
-match = -10.0%%
-title = Chiếu Trúc
-url = https://nemsaithanh.com/chieu-truc-103.html
+match = 57.9%%
+title = Chiếu Trúc Các Loại
+url = https://nemsaithanh.com/chieu-truc-cac-loai/
 
 [trangvangvietnam.com]
 match = -61.9%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -81.0%%
-title = Chiếu trúc chiếu tre giá rẻ TP.HCM - Giao hàng MIỄN PHÍ
-url = https://vongxepsaigon.vn/chieu-truc-chieu-tre/
+match = -52.4%%
+title = Chiếu trúc giá rẻ có viền cao cấp loại tốt size 1m4
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-gia-re-co-vien-cao-cap-loai-tot-size-1m4/
 
 [thegioichieutruc.com]
 match = -47.6%%
