--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-11 11:47:34
+lastsearch = 2024-08-11 13:43:01
 
 [www.bible.com]
-match = -94.1%%
-title = ISAIA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/ISA.22.MIZCLBSI
+match = -88.2%%
+title = LUKA 20 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.20.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
