--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-11 11:40:03
+lastsearch = 2024-08-11 13:40:57
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -92,9 +92,9 @@ title = Ministry of Defence acronyms and abbreviations
 url = https://assets.publishing.service.gov.uk/media/5a7ebee940f0b6230268b464/20140808_MOD_Acronyms_and_Abbreviations.pdf
 
 [esport1.hu]
-match = -73.9%%
-title = MSI 2024: Minden, amit tudni érdemes a közelgő ...
-url = https://esport1.hu/news/2024/04/6/riot-games-league-of-legends-itt-van-minden-amit-eddig-az-msi-reszleteirol-es-resztvevoirol-tudunk-inora
+match = -65.2%%
+title = Nem tetszenek a közösségnek a Riot Games döntései
+url = https://esport1.hu/news/2022/08/19/lol-league-of-legends-riot-games-worlds-formatum-egyenes-kieseses-szakasz-double-elimination-valorant-gsl-loemifar
 
 [www.cnbc.com]
 match = -108.7%%
@@ -122,9 +122,9 @@ title = EBB and Flow, November 1950-July 1951 - DTIC
 url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
 
 [www.tiktok.com]
-match = -113.0%%
-title = Sour frozen pineapple from @Fruit Riot ?! • Watch and see ...
-url = https://www.tiktok.com/@mainstmuse/video/7343386889824603435?lang=en
+match = -82.6%%
+title = RIOT STORE SEOUL SOUTH KOREA It was so cool, all the ...
+url = https://www.tiktok.com/@nabi_stars/video/7339373116012940576
 
 [30rates.com]
 match = -52.2%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -73.9%%
-title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
-url = https://en.yna.co.kr/view/AEN20180406000600320
+match = -113.0%%
+title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
+url = https://en.yna.co.kr/view/AEN20180218002800320
 
 [www.usmcu.edu]
 match = -104.3%%
