--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-11 06:48:39
+lastsearch = 2024-08-11 13:44:44
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -162.5%%
-title = First impressions of @NARS Cosmetics POWERMATTE ...
-url = https://www.tiktok.com/@racheljthomson/video/7246020826531712283
+match = -25.0%%
+title = Simple Xiangling Build
+url = https://www.tiktok.com/discover/simple-xiangling-build
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -265,4 +265,9 @@ url = https://m.putaixin888.com/blog/lrrxzabx-255/
 match = -162.5%%
 title = tui warmdream 15 - More related searches - kaiyun-8889.com
 url = https://www.kaiyun-8889.com/blog/iipyowtm-75/
+
+[6686tiyuwang.com]
+match = -168.8%%
+title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - 6686tiyuwang ...
+url = https://6686tiyuwang.com/shop/vljjrwrj-233/
 
