CI images update

--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-11 05:23:26
+lastsearch = 2024-08-11 13:45:27
 
 [shopee.vn]
 match = -25.9%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
 [www.lazada.vn]
 match = -11.1%%
 title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung ...
-url = https://www.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html?srsltid=AfmBOop9vBeXiXUXZwGhpSZ92cRWtfOb8jI5uklGnDrLGpvzY1XOGR8j
+url = https://www.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [tiki.vn]
 match = 11.1%%
@@ -147,9 +147,9 @@ title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
 url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [demxanh.com]
-match = 7.4%%
-title = Chăn tuyết đa sắc 2.5kg màu hồng nhạt
-url = https://demxanh.com/chan-long-tuyet-da-sac-2.5kg-mau-hong-nhat.html
+match = 11.1%%
+title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html
 
 [vnvc.vn]
 match = -59.3%%
@@ -300,4 +300,9 @@ url = https://truyenhinhthanhhoa.vn/thanh-hoa-chu-dong-phong-chong-benh-dich-ta-
 match = -11.1%%
 title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
 url = https://lazada.vn/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-sanbeovn-i2015859119.html
+
+[demviet.vn]
+match = 14.8%%
+title = Chăn Lông Cừu Siêu Tuyết - ĐỆM VIỆT
+url = https://demviet.vn/chan-long-cuu-sieu-tuyet.html
 
