--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-08-11 10:15:30
+lastsearch = 2024-08-11 13:45:49
 
 [demxanh.com]
 match = 11.8%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoo_OPA-dCTllGqOLfFWo37q8L7vcKti3qoZFmmq8d8Vx9d78m3-
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = -2.9%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-nhập-khẩu-nguyên-ch
 [foreverbedding.net]
 match = 32.4%%
 title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong?srsltid=AfmBOoq_b-mdzBR72LJzd1faCCfpch6hI8c2QFMKTiTQspNrLD_jNyqC
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
 
 [demchinhhang.com]
 match = 53.1%%
@@ -27,9 +27,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.facebook.com]
-match = 23.5%%
-title = Chiếu Điều Hoà Cao Su LaCell - 100%% từ tự nhiên
-url = https://www.facebook.com/chieudieuhoacaosutunhienlacell/
+match = 48.0%%
+title = Chiếu Điều Hòa Cao Su Non
+url = https://www.facebook.com/groups/753270865357544/
 
 [suongtuyet.com]
 match = 2.9%%
