--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-11 09:34:22
+lastsearch = 2024-08-11 13:54:18
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -157,9 +157,9 @@ title = số đỏ casino xs 24|Casino Online Châu Á
 url = https://sinhvien.mit.vn/số-đỏ-casino-xs-24.phtm
 
 [www.facebook.com]
-match = -212.5%%
-title = Thể thức mới của Champions League sẽ tạo nên nhiều cuộc ...
-url = https://www.facebook.com/Onsportchannel/videos/thể-thức-mới-của-champions-league-sẽ-tạo-nên-nhiều-cuộc-đại-chiến-cạnh-tranh-cho/1132596871144109/
+match = -8.3%%
+title = Mai Thanh Hạ
+url = https://www.facebook.com/maithanhha19/
 
 [www.bthh.org.vn]
 match = -68.8%%
@@ -327,9 +327,9 @@ title = Kinh tế Đà Nẵng 6 tháng đầu năm 2024 có nhiều khởi sắc
 url = https://danang.gov.vn/web/guest/chinh-quyen/chi-tiet?id=59658&_c=3
 
 [tuoitre.vn]
-match = -162.5%%
-title = Có ghế thương gia, ADAS, riêng khung gầm đã tốn 3 tỉ
-url = https://tuoitre.vn/xe-buyt-sang-nhu-mercedes-benz-co-ghe-thuong-gia-adas-rieng-khung-gam-da-ton-3-ti-20240726120028742.htm
+match = -18.8%%
+title = U60 nuôi con dúi làm giàu
+url = https://tuoitre.vn/u60-nuoi-con-dui-lam-giau-20240811091320574.htm
 
 [ahmedabadcity.gov.in]
 match = -366.7%%
@@ -512,9 +512,9 @@ title = Cảnh nóng thô tục nhất trong phim Hàn Quốc
 url = https://2sao.vn/canh-nong-tho-tuc-nhat-trong-phim-han-quoc-n-386994.html
 
 [www.nguoi-viet.com]
-match = 18.8%%
-title = Sợi Vắn, Sợi Dài
-url = https://www.nguoi-viet.com/sai-gon-nho/soi-van-soi-dai/
+match = -193.8%%
+title = Bờ sông Tagus, thời vàng son của đế quốc hàng hải Bồ ...
+url = https://www.nguoi-viet.com/doi-song/bo-song-tagus-thoi-vang-son-cua-de-quoc-hang-hai-bo-dao-nha/
 
 [vuahanghieu.com]
 match = -187.5%%
@@ -735,4 +735,14 @@ url = https://www.qdnd.vn/van-hoa/van-hoc-nghe-thuat/chot-no-bang-thi-ca-788604
 match = -81.2%%
 title = Trường Đại học CMC | CMC University
 url = https://cmc-u.edu.vn/
+
+[vpcp.chinhphu.vn]
+match = -187.5%%
+title = Chỉ đạo, điều hành của Chính phủ, Thủ tướng Chính phủ ...
+url = https://vpcp.chinhphu.vn/chi-dao-dieu-hanh-cua-chinh-phu-thu-tuong-chinh-phu-ngay-10-8-2024-102240811085459889.htm
+
+[chinhsachcuocsong.vnanet.vn]
+match = -100.0%%
+title = Kon Tum: 3 người tử vong do đuối nước
+url = https://chinhsachcuocsong.vnanet.vn/kon-tum-3-nguoi-tu-vong-do-duoi-nuoc/45147.html
 
