--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-11 09:20:47
+lastsearch = 2024-08-11 13:46:51
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -555,4 +555,9 @@ url = https://yellowpages.com.vn/categories/132610/Iron.html?page=14
 match = -181.2%%
 title = 10 phim chiếu rạp hot nhất tháng 6/2024 mà bạn không ...
 url = https://www.xtmobile.vn/phim-chieu-rap-hot-nhat-thang-6-2024
+
+[www.shelteredco.com]
+match = -212.5%%
+title = Xoilac TV - TTBD Euro hôm nay, bóng đá Xôi Lạc trực tuyến HD
+url = https://www.shelteredco.com/
 
