--- a/images/nem-di-a-mon-7f-14-tc/config.ini
+++ b/images/nem-di-a-mon-7f-14-tc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-11 11:49:38
+lastsearch = 2024-08-11 13:58:25
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -322,9 +322,9 @@ title = promotion to the cadre of Assistant Superintendent of Posts
 url = https://utilities.cept.gov.in/dop/pdfbind.ashx?id=9538
 
 [ntrs.nasa.gov]
-match = -216.7%%
-title = notice
-url = https://ntrs.nasa.gov/api/citations/19810006481/downloads/19810006481.pdf
+match = -33.3%%
+title = 19800020296.pdf
+url = https://ntrs.nasa.gov/api/citations/19800020296/downloads/19800020296.pdf
 
 [www.epa.gov]
 match = -81.8%%
