--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-11 11:47:27
+lastsearch = 2024-08-11 13:57:02
 
 [shopee.vn]
-match = -21.7%%
-title = Chiếu Trúc Tre Tây Bắc - Cao Bằng Mát Lạnh Mùa Hè
-url = https://shopee.vn/Chiếu-Trúc-Tre-Tây-Bắc-Cao-Bằng-Mát-Lạnh-Mùa-Hè-Hàng-Loại-Đẹp-i.901892488.19874188119
+match = 34.8%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M4X1M95
+url = https://shopee.vn/CHIẾU-TRÚC-THANH-CAO-BẰNG-1M4X1M95-i.231768286.18532306098
 
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html?srsltid=AfmBOopKnG6pehR1rKGDkfys3H68cwz42BRMGt4E4hPS7elJpOAL0Ipy
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
 
 [chuyenhangviet.com]
 match = -43.5%%
@@ -33,8 +33,8 @@ url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=wat
 
 [chieutrucsaigon.com]
 match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [demxanh.com]
 match = -21.7%%
