--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-08-11 11:45:29
+lastsearch = 2024-08-11 13:50:36
 
 [chieutruc.info]
 match = -60.0%%
@@ -42,9 +42,9 @@ title = Chiếu trúc cao bằng ở tại Hà Tĩnh
 url = https://hanggiadunghatinh.com/?x=76/san-pham/chieu-truc-cao-bang
 
 [www.facebook.com]
-match = 28.0%%
-title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieutruccaobangcbg/
+match = 20.0%%
+title = Chiếu trúc Bản Ngà - Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieucaobang/
 
 [caobangtv.vn]
 match = 8.0%%
