--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-11 11:51:18
+lastsearch = 2024-08-11 13:55:17
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -46.7%%
-title = Đèn mắt ếch chiếu điểm HT 8094 10W
-url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
+match = -40.0%%
+title = Đèn Trang Trí HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-trang-tri
 
 [www.htlightlevel.vn]
 match = -193.3%%
@@ -37,8 +37,8 @@ title = HT Chiếu Sáng
 url = https://www.dienotobinhdinh.com/ht-chieu-sang/
 
 [www.facebook.com]
-match = -186.7%%
-title = Cộng đồng cư dân Bát Tràng | Chiếu tăm cây H&T khẳng ...
+match = -140.0%%
+title = Chiếu tăm cây H&T khẳng định thương hiệu trên ...
 url = https://www.facebook.com/groups/664918127312487/posts/chiếu-tăm-cây-ht-khẳng-định-thương-hiệu-trên-thị-trường-freeshiplh-0963-658-905-/1872701319867489/
 
 [rangdong.com.vn]
@@ -58,8 +58,8 @@ url = https://hactexoticzone.com/
 
 [www.youtube.com]
 match = -240.0%%
-title = GEN vs KT Highlights Game 2 | W8D3 | 2024 LCK Summer Split
-url = https://www.youtube.com/watch?v=vaA2CFdX-X0
+title = Vui lên nào anh em ơi | Thanh niên 30 tuổi đầu vẫn bị mẹ ...
+url = https://www.youtube.com/watch?v=6wZP5mKt0ZA
 
 [thaibinhseed.com.vn]
 match = -193.3%%
