--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-11 01:23:40
+lastsearch = 2024-08-11 14:00:06
 
 [demxanh.com]
 match = 34.5%%
@@ -62,14 +62,14 @@ title = Chiếu điều hòa caosu non 2D 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html
 
 [chiaki.vn]
-match = 13.8%%
-title = Chiếu điều hòa cao su non Tencel Latex 2D mẫu 2022
-url = https://chiaki.vn/chieu-dieu-hoa-cao-su-non-tencel-latex-2d-mau-2022
+match = 10.3%%
+title = Chiếu Điều Hòa Tencel Latex Cao Su Non 5D mẫu 2022
+url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-5d-mau-2022
 
 [thegioichieutruc.com]
-match = -34.5%%
-title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
 
 [changagoidemdep.vn]
 match = -27.6%%
