--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-11 13:38:10
 [demxanh.com]
 match = -17.6%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoqzxc8CRmKQqD0qCgNLE0PRjq-wymZTzGfBQg_ciqIakCelFd6V
 
 [dem24h.vn]
 match = -29.4%%
