--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-11 11:42:49
+lastsearch = 2024-08-11 13:45:03
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -222,9 +222,9 @@ title = Pima County, AZ | Official Website
 url = https://www.pima.gov/
 
 [www.youtube.com]
-match = -123.5%%
-title = Như Quỳnh - Xuân Đẹp Làm Sao (Thanh Sơn) PBN 101
-url = https://www.youtube.com/watch?v=QcBvdLl0L1c
+match = -182.4%%
+title = Bông Hoa Đẹp Nhất, Suýt Nữa Thì, Một Đêm Say....| Andiez ...
+url = https://www.youtube.com/watch?v=kESfG4X6QjY
 
 [www.gsa.gov]
 match = -44.4%%
@@ -412,9 +412,9 @@ title =
 url = https://hhlawoffice.com/basics-of-colorado-homeowners-association-hoa-law/
 
 [www.justice.gov]
-match = -17.6%%
-title = joint_statement_ra.pdf
-url = https://www.justice.gov/sites/default/files/crt/legacy/2010/12/14/joint_statement_ra.pdf
+match = -194.1%%
+title = Department of Justice | Homepage | United States Department ...
+url = https://www.justice.gov/
 
 [www.nolo.com]
 match = 0.0%%
