--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-11 11:34:46
+lastsearch = 2024-08-11 13:46:10
 
 [www.mantubung.com]
 match = -100.0%%
@@ -74,7 +74,7 @@ url = https://ichikobaby.com/san-pham/man-chup-chong-muoi-tu-bung-cho-tre-em-evo
 [www.lazada.vn]
 match = -116.7%%
 title = Màn Chụp Cho Bé Gấp Gọn, Mùng Chụp Tự Bung Chống ...
-url = https://www.lazada.vn/products/man-chup-cho-be-gap-gon-mung-chup-tu-bung-chong-muoi-tre-em-dung-cho-che-giuong-va-noi-cui-tien-loi-i1531954275.html?srsltid=AfmBOorgCP305ymWWONgrE5P7dYb0Y3K5DiLQGCoU5f8-YSCJWjjw6Q4
+url = https://www.lazada.vn/products/man-chup-cho-be-gap-gon-mung-chup-tu-bung-chong-muoi-tre-em-dung-cho-che-giuong-va-noi-cui-tien-loi-i1531954275.html
 
 [www.mungbaobao.com]
 match = -5.6%%
