--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-11 13:27:29
+lastsearch = 2024-08-11 13:51:36
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -72,9 +72,9 @@ title = TUI Cruises 10 April 2024
 url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 
 [www.lightology.com]
-match = -200.0%%
-title = Tui Pendant by David Trubridge - Lightology
-url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441&srsltid=AfmBOop3nsZELjtd5ILPP_Bn-CadRsD5DrwvV_uHL8o5KConl4eqGMU2
+match = -316.7%%
+title = Tui Pendant by David Trubridge | TUI-SMAL-BMB-WHI-KIT- ...
+url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
 
 [vitalimpacts.org]
 match = -91.7%%
